--- a/style.css
+++ b/style.css
@@ -1,99 +1,92 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.current-weather {
-    display: flex;
-    flex-direction: column;
-}
-
-body {
-    /* height: 100vh; */
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    background-color: blueviolet;
-    font-family: sans-serif;
-    color: cornsilk;
-}
-
-.location,
-.temperature {
-    /* height: 30vh; */
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.temperature {
-    flex-direction: column;
-}
-
-.degree-section {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
-.degree-section span {
-    margin: 10px;
-    font-size: 30px;
-    content: "\00B0";
-}
-
-.degree-section h2 {
-    font-size: 40px;
-}
-
-.time {
-    /* padding-left: 50px; */
-    /* margin: 0px auto; */
-    display: flex;
-    flex-direction: row;
-}
-
-.time p {
-    align-items: center;
-    padding-left: 10px
-}
-
-.button {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-button {
-    border-radius: 5px;
-    background-color: crimson;
-    color: cyan;
-    font-size: 7px;
-    padding: 5px;
-}
-
-#hourly-forecast {
-    display: flex;
-    flex-direction: column;
-}
-
-#hourly-forecast div {
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: row;
-    padding: 0px 20px 0px 20px
-}
-
-#hourly-forecast img {
-    width: 50px
-}
-
-#daily-forecast div {
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: row;
-    padding: 0px 20px 0px 20px
-}
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
+ 
+ body {
+     background-color: blueviolet;
+     font-family: 'Times New Roman', Times, serif;
+     font-size: 20px;
+ }
+ 
+ #container {
+     padding-top: 50px;
+     display: flex;
+     justify-content: center;
+     flex-direction: column;
+     align-items: center;
+ }
+ 
+ #container .location {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+ 
+ #container img {
+     width: 150px;
+ }
+ 
+ .time {
+     display: flex;
+     flex-direction: row;
+ }
+ 
+ .time p {
+     padding: 0px 20px 20px 10px
+ }
+ 
+ .temperature {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     padding-bottom: 20px
+ }
+ 
+ button {
+     color: #fff !important;
+     text-decoration: none;
+     background: #722458;
+     padding: 10px;
+     border-radius: 5px;
+     display: inline-block;
+     border: none;
+     transition: all 0.4s ease 0s;
+ }
+ 
+ button:hover {
+     text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+     transition: all 0.4s ease 0s;
+ }
+ 
+ #hourly-forecast {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: wrap;
+ }
+ 
+ #hourly-forecast div {
+     padding: 5px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+ 
+ #daily-forecast {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     justify-content: center;
+     flex-wrap: wrap;
+ }
+ 
+ #daily-forecast div {
+     padding: 5px 15px 5px 15px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
